# dsp_bp_generator

./: .gitignore  BeltRouter.py  Blueprint.py  BlueprintArea.py  BlueprintBuilding.py  BlueprintBuildingHeader.py  BlueprintHeader.py  BlueprintStringHeader.py  Buildings.py  FactoryBlock.py  FactoryLine.py  FactorySection.py  ItemEnum.py  MD5.py  Packet.py  README.md  bp_parser.py  generate_and_serialize.py  generate_blueprint.py  generate_factory.py  parse.py  parse_edit_and_serialize.py  pyproject.toml  recipes.py  requirements.txt  setup.py  test.py  utils.py
.github/workflows/: poetry-publish.yml  python-build.yml  python-publish.yml
application/: factory_designer.py
application/factory_generator/: __init__.py  item_flow.py  multy_stage_assembly.py  proliferator.py  recipes.py
blueprint/: blueprint.py  blueprint_area.py  blueprint_building.py  blueprint_building_header.py  blueprint_header.py  blueprint_string_header.py  packet.py
buildings/: assembling_machine.py  building.py  conveyer_belt.py  smelter.py  sorter.py  splitter.py  tesla_tower.py
dsp_bp/: enums.py  utils.py
dsp_bp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dsp_bp/blueprint/: blueprint.py  blueprint_area.py  blueprint_building.py  blueprint_building_header.py  blueprint_header.py  blueprint_string_header.py  md5.py  packet.py
dsp_bp/buildings/: __init__.py  building.py  (+9 more)
dsp_bp_generator/: enums.py  utils.py
examples/: buildings.py  generate_factory.py  logistic_factory.py  oil_refinary.py  parse.py  parse_edit_and_serialize.py  sorter_example.py
src/: ItemEnum.py  utils.py
(+80 files in other folders)
