[tool.poetry]
name = "dsp_bp_generator"
version = "0.1.0"
description = "This is a small project to generate blueprint to the game Dyson Sphere Program (DSP)"
authors = ["Rasmus Stagsted <rasmuskarnoestagsted@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"


[tool.poetry.scripts]
test = "dsp_bp_generator.main:test"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyyaml = "5.3.1"
colorama = "0.4.3"
pyside6 = "^6.7.2"
pyperclip = "1.9.0"
networkx = "3.5"
numpy = "2.3.0"
scipy = "1.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
